.gitignore modified to ignore fancybox directory used to display galleries in galleries.php, images directory, and ini file. style.css cleaned up to remove several out of use style rules, though deprecated classes were retained for legacy. style.css further organized: normalization and page elements -> main rules for index.php -> secondary page rules (galleries.php, contact.php; future pages will follow) -> responsive rules -> code classes -> main.js function classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 # no .php
-*.php
+	#9-23-16 now add .php files
+#*.php
 
 #ignore all from wp_files
 wp_files/
 
 #ignore all from nttp_mockup_files
 nttp_mockup_files/
+
+#ignore all image files
+images/
+
+#ignore fancybox add-on
+fancybox/
+
+
+#ignore ini file
+*.ini
